// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe generator --no-standalone should export the pipe correctly when directory is nested deeper 1`] = `
"import { NgModule } from '@angular/core';
import { TestPipe } from './my-pipes/test/test.pipe';
@NgModule({
  imports: [],
  declarations: [TestPipe],
  exports: [TestPipe],
})
export class TestModule {}
"
`;

exports[`pipe generator --no-standalone should generate a pipe with test files and attach to the NgModule automatically 1`] = `
"import { Pipe, PipeTransform } from '@angular/core';

@Pipe({
  name: 'test',
})
export class TestPipe implements PipeTransform {
  transform(value: unknown, ...args: unknown[]): unknown {
    return null;
  }
}
"
`;

exports[`pipe generator --no-standalone should generate a pipe with test files and attach to the NgModule automatically 2`] = `
"import { TestPipe } from './test.pipe';

describe('TestPipe', () => {
  it('create an instance', () => {
    const pipe = new TestPipe();
    expect(pipe).toBeTruthy();
  });
});
"
`;

exports[`pipe generator --no-standalone should generate a pipe with test files and attach to the NgModule automatically 3`] = `
"import { NgModule } from '@angular/core';
import { TestPipe } from './test.pipe';
@NgModule({
  imports: [],
  declarations: [TestPipe],
  exports: [],
})
export class TestModule {}
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat 1`] = `
"import { Pipe, PipeTransform } from '@angular/core';

@Pipe({
  name: 'test'
})
export class TestPipe implements PipeTransform {
  transform(value: unknown, ...args: unknown[]): unknown {
    return null;
  }
}
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat 2`] = `
"import { TestPipe } from './test.pipe';

describe('TestPipe', () => {
  it('create an instance', () => {
    const pipe = new TestPipe();
    expect(pipe).toBeTruthy();
  });
});
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat 3`] = `
"import { NgModule } from '@angular/core';
import { TestPipe } from './test/test.pipe';
@NgModule({
  imports: [],
  declarations: [TestPipe],
  exports: [],
})
export class TestModule {}
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat but deeply nested 1`] = `
"import { Pipe, PipeTransform } from '@angular/core';

@Pipe({
  name: 'test'
})
export class TestPipe implements PipeTransform {
  transform(value: unknown, ...args: unknown[]): unknown {
    return null;
  }
}
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat but deeply nested 2`] = `
"import { TestPipe } from './test.pipe';

describe('TestPipe', () => {
  it('create an instance', () => {
    const pipe = new TestPipe();
    expect(pipe).toBeTruthy();
  });
});
"
`;

exports[`pipe generator --no-standalone should import the pipe correctly when files are flat but deeply nested 3`] = `
"import { NgModule } from '@angular/core';
import { TestPipe } from './my-pipes/test/test.pipe';
@NgModule({
  imports: [],
  declarations: [TestPipe],
  exports: [],
})
export class TestModule {}
"
`;

exports[`pipe generator should generate correctly 1`] = `
"import { Pipe, PipeTransform } from '@angular/core';

@Pipe({
  name: 'test',
  standalone: true,
})
export class TestPipe implements PipeTransform {
  transform(value: unknown, ...args: unknown[]): unknown {
    return null;
  }
}
"
`;

exports[`pipe generator should generate correctly 2`] = `
"import { TestPipe } from './test.pipe';

describe('TestPipe', () => {
  it('create an instance', () => {
    const pipe = new TestPipe();
    expect(pipe).toBeTruthy();
  });
});
"
`;
